--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -13,7 +13,7 @@
 				</div>
 			</div>
 			<div class="col-12 col-lg-auto mt-3 mt-lg-0 text-center">
-				版权 © {{ .site.time }} <a href="/">{{ .site.title }}</a>. 主题设计 <a href="/" target="_blank">{{ .site.author.name }}</a>。 所有版权已保留。
+				版权 © {{ .site.Time }} <a href="/">{{ .site.Title }}</a>. 主题设计 <a href="/" target="_blank">{{ .site.author.name }}</a>。 所有版权已保留。
 			</div>
 		</div>
 	</div>
